--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,8 @@
 
 <app-inputdata></app-inputdata>
 <app-printconsole></app-printconsole>
-
+<app-para></app-para>
+<app-parent></app-parent>
+<app-paren></app-paren>
+<app-task6parent></app-task6parent>
+<app-firstcomponent></app-firstcomponent>
